--- a/src/styles/features.css
+++ b/src/styles/features.css
@@ -21,7 +21,7 @@
 
 
 .feature-container{
-    height: 100vh;
+    height: fit-content;
     width: 100vw;
     display: flex;
     flex-direction: row;
@@ -29,7 +29,7 @@
 
 .features-img img{
     width: 50vw;
-    height: 100vh;
+    height: 100%;
     position: relative;
     z-index: -1;
 }
@@ -48,7 +48,7 @@
 
 .content-wrapper{
     /* width:70%; */
-    height: 75%;
+    height:fit-content;
     padding-top:15%;
     padding-left:10% ;
     padding-right:10% ;
@@ -72,6 +72,8 @@
     flex-direction: row;
     justify-content: space-around;
     margin-top: 10%;
+    margin-bottom: 10%;
+
 }
 
 .feature-icon{
