--- a/src/styles/features.css
+++ b/src/styles/features.css
@@ -21,7 +21,7 @@
 
 
 .feature-container{
-    height: fit-content;
+    height: 100vh;
     width: 100vw;
     display: flex;
     flex-direction: row;
@@ -29,12 +29,15 @@
 
 .features-img img{
     width: 50vw;
-    height: 100%;
+    height: 100vh;
     position: relative;
     z-index: -1;
+
 }
 .features-img {
     background:linear-gradient(135deg, #ffffff00 10%, #ff000075 100%)  ;
+    /* filter: blur(0.1rem); */
+
 }
 
 .features-body{
@@ -48,32 +51,34 @@
 
 .content-wrapper{
     /* width:70%; */
-    height:fit-content;
+    height: 75%;
     padding-top:15%;
     padding-left:10% ;
     padding-right:10% ;
     color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
 }
 
 .content-wrapper p{
     font-family: 'Poppins';
     margin: 0;
+    font-size: 1.2rem;
 }
 
 .content-wrapper h1{
     font-family: 'Superset';
     font-weight: 200;
-    font-size: 5rem;
+    font-size: 3rem;
+    letter-spacing: .2rem;
 }
 
 .features-icons{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin-top: 10%;
-    margin-bottom: 10%;
-
 }
 
 .feature-icon{
@@ -86,11 +91,12 @@
     height:60px;
     width: 60px;
     align-self: center;
+
 }
 
 .feature-icon h1{
     font-family: 'Montserrat';
-    font-size: 1rem;
+    font-size: 0.8rem;
     align-self: center;
     text-align: center;
     font-weight: 600;
@@ -129,6 +135,9 @@
         z-index: 2; ;
 
     
+    }
+    .content-wrapper {
+        height: 100vh;
     }
     
     .content-wrapper p{
