--- a/src/styles/videosection.css
+++ b/src/styles/videosection.css
@@ -1,6 +1,6 @@
 .video-container{
     width: 100vw;
-    height: 100vh;
+    height: fit-content;
     display: flex;
     flex-direction: row;
   
@@ -25,6 +25,8 @@ background-color: #151515;
     flex-direction: column ;
     justify-content: center;
     align-items: center;
+    padding-top: 10%;
+
  }
 
  .video-sub p{ 
@@ -160,7 +162,7 @@ background-color: #151515;
     @media only screen and (max-width: 600px) {
              .video-container{
             width: 100vw;
-            height: 200vh;
+            height: fit-content;
             display: flex;
             flex-direction: column;
           
@@ -178,7 +180,7 @@ background-color: #151515;
 
             .video-sub{ 
                     width: 100vw;
-                    height: 100vh;
+                    height: fit-content;
                     background-color: black;
                     font-family: 'Poppins';
                     color: white;
@@ -186,6 +188,7 @@ background-color: #151515;
                     flex-direction: column ;
                     justify-content: center;
                     align-items: center;
+                    padding-top: 10%;
                 }
                 .steps-wrapper {
                     width:95%;
