--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Superset';
-  src: url('./fonts/SupersetRegular.ttf') format('truetype'),
+  src: url('./assets/fonts/SupersetRegular.ttf') format('truetype'),
 }
 
 
