changed superset font

--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -21,7 +21,7 @@
 
 .carousel-title h1{
     font-size: 4rem;
-    font-family: "Superset";
+    font-family: "Bebas Neue";
     letter-spacing: .1rem;
 }
 
