--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -54,7 +54,7 @@
     padding-top: 0;
     text-align: left;
     color: rgb(255, 0, 0);
-    font-family: "Superset", sans-serif;
+    font-family: "Bebas Neue", sans-serif;
     font-weight: 300;
     padding-left: 8vw;
     padding-right: 10vw;
