--- a/src/styles/videosection.css
+++ b/src/styles/videosection.css
@@ -36,7 +36,7 @@ background-color: #151515;
 
  
  .video-sub h1{ 
-   font-family: "Superset";
+   font-family: "Bebas Neue";
     color: rgb(255, 0, 0);
     font-weight: 100;
 
