--- a/src/styles/features.css
+++ b/src/styles/features.css
@@ -8,13 +8,13 @@
     justify-content: center;
     flex-direction: column;
     width: 100vw;
-    font-family: 'Superset';
+    font-family: 'Bebas Neue';
     
 }
 
 .features-title h1 {
     font-size: 4rem;
-    font-family: "Superset";
+    font-family: "Bebas Neue";
     letter-spacing: .1rem;
 }
 
@@ -69,7 +69,7 @@
 }
 
 .content-wrapper h1{
-    font-family: 'Superset';
+    font-family: 'Bebas Neue';
     font-weight: 200;
     font-size: 3rem;
     letter-spacing: .2rem;
