--- a/src/styles/testHero.css
+++ b/src/styles/testHero.css
@@ -24,7 +24,7 @@ margin-top: 10vh;
 
 
 .test-content h1{
-    font: 400 15vh / 1 "Superset";
+    font: 400 15vh / 1 "Bebas Neue";
     letter-spacing: .015em;
     text-transform: uppercase;
     width: 17rem;
@@ -121,7 +121,7 @@ transform: scale(1.1);
     }
     
     .test-content h1{
-        font: 400 3.5rem / 1 "Superset";
+        font: 400 3.5rem / 1 "Bebas Neue";
         letter-spacing: .015em;
         text-transform: uppercase;
         width: 100vw;
