made weights available to admin only and fixed prices images layout

--- a/src/styles/prices.css
+++ b/src/styles/prices.css
@@ -113,8 +113,9 @@
         width: 100%;
         height: calc(40vh + 4rem);
         object-fit: contain;  
-    margin-top: 4%;
-margin-bottom: 4%;  }
+        margin-top: 4%;
+        margin-bottom: 4%; 
+     }
     
     .price-wrapper {
         padding-left: 1.5rem;
