--- a/src/styles/prices.css
+++ b/src/styles/prices.css
@@ -27,7 +27,7 @@
     background-position: 0 0, 0 0;
     background-size: auto, 50px;
     background-color: rgb(34, 34, 34);
-    height:60vh;
+    /* height:60vh; */
     border: 1px solid rgba(255, 255, 255, .1);
     border-radius: 16px;
     padding: 2rem;
